Add camera definition, params, and zoom handling

--- a/models/typhoon_h480/typhoon_h480.sdf.jinja
+++ b/models/typhoon_h480/typhoon_h480.sdf.jinja
@@ -409,6 +409,11 @@
         <plugin name="CameraManagerPlugin" filename="libgazebo_camera_manager_plugin.so">
             <robotNamespace>typhoon_h480</robotNamespace>
             <interval>1</interval>
+            <vendor>Yuneec</vendor>
+            <model>CGO3</model>
+            <focal_length>2.44</focal_length>
+            <sensor_size_h>6.17</sensor_size_h>
+            <sensor_size_v>4.55</sensor_size_v>
             <width>3840</width>
             <height>2160</height>
             <maximum_zoom>8.0</maximum_zoom>
