--- a/models/typhoon_h480/typhoon_h480.sdf.jinja
+++ b/models/typhoon_h480/typhoon_h480.sdf.jinja
@@ -329,6 +329,7 @@
     </joint>
 
     <link name="cgo3_camera_link">
+      <gravity>0</gravity>
       <inertial>
         <!-- place holder -->
         <pose>-0.041 0 -0.162 0 0 0</pose>
