Change camera name to include thermal

--- a/models/typhoon_h480/typhoon_h480.sdf.jinja
+++ b/models/typhoon_h480/typhoon_h480.sdf.jinja
@@ -411,7 +411,7 @@
             <robotNamespace>typhoon_h480</robotNamespace>
             <interval>1</interval>
             <vendor>Yuneec</vendor>
-            <model>CGO3</model>
+            <model>CGO3Thermal</model>
             <focal_length>14</focal_length>
             <sensor_size_h>6.17</sensor_size_h>
             <sensor_size_v>4.55</sensor_size_v>
