--- a/models/typhoon_h480/typhoon_h480.sdf.jinja
+++ b/models/typhoon_h480/typhoon_h480.sdf.jinja
@@ -179,6 +179,44 @@
           </script>
         </material>
       </visual>
+      <sensor type="ray" name="laser_livox">
+        <pose>0.5 0 0.08 0 0 0</pose>
+        <visualize>true</visualize>
+        <update_rate>10</update_rate>
+        <plugin name="gazebo_ros_laser_controller" filename="devel/lib/liblivox_laser_simulation.so">
+			<ray>
+			  <scan>
+				<horizontal>
+				<samples>100</samples>
+				<resolution>1</resolution>
+				<min_angle>-1.228712/2</min_angle>
+				<max_angle>1.228712/2</max_angle>
+				</horizontal>
+				<vertical>
+				<samples>50</samples>
+				<resolution>1</resolution>
+				<min_angle>-1.228712/2</min_angle>
+				<max_angle>1.228712/2</max_angle>
+				</vertical>
+			  </scan>
+			  <range>
+				<min>0.1</min>
+				<max>200.0</max>
+				<resolution>0.002</resolution>
+			  </range>
+			  <noise>
+				<type>gaussian</type>
+				<mean>0.0</mean>
+				<stddev>0.01</stddev>
+			  </noise>
+			</ray>
+      <visualize>false</visualize>
+		  <samples>10000</samples>
+		  <downsample>1</downsample>
+		  <csv_file_name>mid70.csv</csv_file_name>
+		  <ros_topic>scan</ros_topic>
+        </plugin>
+      </sensor>
     </link>
     <joint name='cgo3_mount_joint' type='revolute'>
       <child>cgo3_mount_link</child>
@@ -401,7 +439,7 @@
         </camera>
         <always_on>1</always_on>
         <update_rate>10</update_rate>
-        <visualize>false</visualize>
+        <visualize>true</visualize>
         <plugin name="GstCameraPlugin" filename="libgazebo_gst_camera_plugin.so">
             <robotNamespace></robotNamespace>
             <udpHost>127.0.0.1</udpHost>
