--- a/models/typhoon_h480_livox/typhoon_h480_livox.sdf.jinja
+++ b/models/typhoon_h480_livox/typhoon_h480_livox.sdf.jinja
@@ -182,7 +182,7 @@
       <sensor type="ray" name="laser_livox">
         <pose>0.5 0 0.08 0 0 0</pose>
         <visualize>true</visualize>
-        <update_rate>10</update_rate>
+        <update_rate>4</update_rate>
         <plugin name="gazebo_ros_laser_controller" filename="devel/lib/liblivox_laser_simulation.so">
 			<ray>
 			  <scan>
@@ -214,7 +214,7 @@
 		  <samples>10000</samples>
 		  <downsample>1</downsample>
 		  <csv_file_name>mid70.csv</csv_file_name>
-		  <ros_topic>scan</ros_topic>
+		  <ros_topic>livox/lidar</ros_topic>
         </plugin>
       </sensor>
     </link>
